feat: add exception handling and add endpoint of references